--- a/final_sim_2.Rmd
+++ b/final_sim_2.Rmd
@@ -1,32 +1,21 @@
 ---
-title: "JSM 2023"
-author: Report by Rich Evans
-date: 2023-04-22
-output: 
-  html_document:
-     number_sections: true
-
+title: "R Notebook"
+output: html_notebook
 ---
+
 
 ```{r echo=FALSE}
 #install.packages("pacman")
 pacman::p_load(
-rio,        # to import data
        data.table, # to group and clean data
        tidyverse,  # allows use of pipe (%>%) function in this chapter
-       here,       #path for importing 
        janitor,     #for clean_names and tabyl
        broom,   #tidy output, use tidy(xxx)
        gtsummary,  #nice tables
        magrittr, # for %<>%
-       skimr, #for data summaries
-       ggplot2, #for plotting
-        hrbrthemes, #themes fore ggplot2
-        kableExtra,
-        scrime,
-        caret
+        kableExtra
    ) 
-options(digits = 4)
+
 ```
 
 <!-- If one SNP has a marginal effect on a phenotype, it is known as an SNP interaction displaying marginal effects. In some cases, however, each individual SNP has no effect on the phenotype, but the combination has a strong effect; this is known as SNP interactions displaying no marginal effects (INME) -->
@@ -171,8 +160,9 @@ snp.sim.data<-simRareSNP(ORs=rep(OR,num.important.snps)
                 , rho=0)
 
 labeled.rupture<-snp.sim.data$Y
-predisposition<-1*(snp.sim.data$X[snp.sim.data$SNP0indx==1,]>0) #the 1* converts logical to 0/1.
+
 predisposition<-snp.sim.data$X
+predisposition[predisposition==2]<-1 #removes any 2's
 
 df<-data.frame(predisposition=predisposition
                ,naive.rupture=naive.rupture
@@ -190,68 +180,21 @@ coef.pvalues.labeled<-c(coef.pvalues.labeled,coef(summary(m.labeled))[,4][-1])
 
 
   } #end loop
+pvalues.sig<-sum(coef.pvalues.labeled<0.05)/(num.important.snps*num.iter)
 
 pvalues.diff<-(coef.pvalues.labeled<0.05)==
                             (coef.pvalues.naive<0.05)
 
-return(list(sum(pvalues.diff)/length(pvalues.diff)))
+out<-sum(pvalues.diff)/length(pvalues.diff)
+
+
+#return(list(sum(pvalues.diff)/length(pvalues.diff)))
+return(list(c(out,pvalues.sig)))
 }
 
 ```
 
 
-
-
-
-```{r, echo=FALSE, warning=FALSE}
-
-# goo<-
-# map(list(worst=c(200,5,60,10,150,50,0.60)
-#         ,a01=c(200,2,60,5,150,50,0.01)
-#         ,a02=c(200,2,60,5,150,50,0.02)
-#         ,a05=c(200,2,60,5,150,50,0.05)
-#         ,a1=c(200,2,60,5,150,50,0.10)
-#         ,a2=c(200,2,60,5,150,50,0.20)
-#         ,imp5=c(200,2,60,5,150,50,0.05)
-#         ,imp15=c(200,2,60,15,150,50,0.05)
-#         ,imp35=c(200,2,60,35,150,50,0.05)
-#         ,or1.5=c(200,1.5,60,5,150,50,0.05)
-#         ,or5=c(200,5,60,5,150,50,0.05)
-#         ,or10=c(200,10,60,5,150,50,0.05)
-#         ),
-# sim.fun)
-
-# sim.fun(200,5,60,40,150,50,0.60) #worst low MAP
-# 
-# sim.fun(200,5,60,5,150,50,0.05) #0.86
-# 
-# sim.fun(200,2,1,1,150,150,0.25) #0.63
-# 
-# sim.fun(200,2,2,2,150,150,0.25) #0.5383
-# 
-# sim.fun(200,2,2,2,150,50,0.25) #0.77
-# 
-# sim.fun(200,2,2,2,50,150,0.25) #0.98
-# 
- # sim.fun(num.iter=5
- #                  ,OR=150
- #                  ,num.snps=60
- #                  ,num.important.snps=2
- #                  ,num.naive.control=50
- #                  ,num.naive.case=50
- #                  ,prop.nondetect=0.05)
-
-# as_tibble(as_tibble(goo))
-# 
-# data.frame(goo) %>% map(unlist) 
-# 
-# do.call(rbind,goo)
-
-
-```
-
-<!-- map2: -->
-<!-- https://dcl-prog.stanford.edu/purrr-parallel.html -->
 ```{r same_table_two_ways, echo=FALSE, warning=FALSE}
 
  now<-Sys.time()
@@ -271,19 +214,22 @@ case<-  list(a,b,c,d,a,b,c,d,a,b,c,d,a,b,c,d)
 contrl<-list(a,a,a,a,a,b,c,d,d,d)
 case<-  list(a,b,c,d,a,a,a,a,d,d)
 
+
+
 foo<-data.frame(control=unlist(contrl)
            ,case=unlist(case)
-           ,prop.agree.01=unlist(map2(contrl,case,\(contrl,case) sim.fun(num.iter=2000
-                                                                         ,OR=100
-                                                                         ,num.snps=12
+           ,prop.agree.01=unlist(map2(contrl,case,\(contrl,case) sim.fun(num.iter=200
+                                                                         ,OR=10
+                                                                         ,num.snps=5
                                                                          ,num.important.snps=5
                                                                          ,contrl
                                                                          ,case
                                                                          ,prop.nondetect=0.01)))
            #,prop.agree.05=unlist(map2(contrl,case,\(contrl,case) sim.fun(500,100,12,5,contrl,case,0.05)))
            #,prop.agree.1=unlist(map2(contrl,case,\(contrl,case) sim.fun(500,100,12,5,contrl,case,0.10)))
-           ,prop.agree.25=unlist(map2(contrl,case,\(contrl,case) sim.fun(2000,100,12,5,contrl,case,0.25)))
+           ,prop.agree.25=unlist(map2(contrl,case,\(contrl,case) sim.fun(200,10,5,5,contrl,case,0.25)))
            ) 
+
 
 foo|> arrange(prop.agree.01)
 #foo|> arrange(prop.agree.1)
@@ -292,18 +238,51 @@ foo |> arrange(prop.agree.25)
 difftime(Sys.time(),now)
 ```
 
+<!-- map2: -->
+<!-- https://dcl-prog.stanford.edu/purrr-parallel.html -->
 
 
-```{r, echo=FALSE}
-# goo<-simRareSNP(OR=1000, n0=25, n1=25, nSNP=1, rho=0,
-#                  MAF0slow=0.001, MAF0sup=0.01,         #MAF0slow=0.001, MAF0sup=0.01,
-#                  MAFslow=0.001, MAFsup=0.01, p0=0.05)
-# 
-# names(goo)
-# goo$SNP0indx
-# goo$X
+```{r pairs,warning=FALSE}
 
+ now<-Sys.time()
+
+contrl<-list(50,100,150,300,50,50,50,100,150,300)
+case<-  list(50,100,150,300,100,150,300,50,50,50)
+
+a<-50
+b<-100
+c<-200
+d<-300
+
+
+contrl<-list(a,a,a,a,b,b,b,b,c,c,c,c,d,d,d,d)
+case<-  list(a,b,c,d,a,b,c,d,a,b,c,d,a,b,c,d)
+
+contrl<-list(a,a,a,a,a,b,c,d,d,d)
+case<-  list(a,b,c,d,a,a,a,a,d,d)
+
+
+
+control<-unlist(contrl)
+case<-unlist(case)
+prop.agree.05<-map2(contrl,case,\(contrl,case) sim.fun(20,10,5,5,contrl,case,0.01))
+mat1<-matrix(unlist(prop.agree.05),nrow=length(prop.agree.05),byrow=TRUE)
+
+prop.agree.25<-map2(contrl,case,\(contrl,case) sim.fun(50,10,5,5,contrl,case,0.25))
+mat2<-matrix(unlist(prop.agree.25),nrow=length(prop.agree.25),byrow=TRUE)
+
+foo<-as.data.frame(cbind(control,case,mat1,mat2)) %>% rename(control=1
+                                                        ,case=2
+                                                        ,pr.eq.01=3
+                                                        ,pr.sig.01=4
+                                                        ,pr.eq.25=5
+                                                        ,pr.sig.25=6)
+
+foo|> arrange(pr.eq.01)
+
+foo |> arrange(pr.eq.25)
+
+difftime(Sys.time(),now)
 ```
-
 
 
