--- a/jsm_2023_paper.tex
+++ b/jsm_2023_paper.tex
@@ -1,19 +1,45 @@
 
+1. Introduction
+Genome wide association studies (GWAS) of cranial cruciate ligament disease (CCLD) in dogs use case-control designs. The case are truly positive CCLD cases because they are enrolled from the set of dogs who have undergone CCL repair. The controls are typically five-years-old or older with no history of CCLD and pass an orthopedic veterinary exam by a board-certifed surgeon. CCLD GWAS studies usually enroll as many dogs as they possibly can without regard to the balance between the numbers of cases and controls.
 
-Genome wide association studies (GWAS) of cranial cruciate ligament disease (CCLD) in dogs use case-control designs. The case are truly positive CCLD cases because they are enrolled from the set of dogs who have undergone CCL repair. The controls are typically five-years-old or older with no history of CCLD and pass an orthopedic veterinary exam by a board-certifed surgeon. 
-
-It is the control group that is of interest to us because some of those dogs are not truly CCLD-negative dogs, that is, they are false negatives. Some will get CCLD in the future, and so genotypiclly belong in the CCLD cases group. Other control dogs may have sub-diagnostic disease. For example, a dog might appear sound with physical exam and enrolled in the control group, but actually have force-platform-detectable hindlimb lameness. Such a dog should not be in the control group becuase the lameness might be CCLD. 
+It is the control group that is of interest to us because some of those dogs are not truly CCLD-negative dogs, that is, they are false negatives. Some will get CCLD in the future, and so genotypiclly belong in the CCLD cases group. Other control dogs may have sub-diagnostic disease. For example, a dog might appear sound with physical exam and enrolled in the control group, but actually have force-platform-detectable hindlimb lameness. Such a dog should not be in the control group because the lameness might be CCLD. 
 
 False negatives in the control groups of a GWAS studies is a long standing research problem, and there is ample documentation of the biases false negatives cause, namely decreasing XXX and YYYY. 
 
 Treating the unknown false negatives as negatives is called the naive model. 
 
-CCLD GWAS studies assume the naive model because it is assumed that the false-negative rate is low, and the low rate causes small biases that have minimal impact on inferences. However, there are more components to false-negative bias than the false-negative rate. Biases can increase or decrease if the property of being false-negative is correlated with a covariate (e.g., a SNP). For example, hypothetically, there could be a set of SNPs that predispose dogs to unstable knees and sub-diagnostic CCLD. Biases also change if covariates are is strongly or weakly assocated with disease state. 
+CCLD GWAS studies assume the naive model because it is assumed that the false-negative rate is low, and the low rate causes small biases that have minimal impact on inferences. However, there are more components to false-negative bias than the false-negative rate. Biases can increase or decrease if the property of being false-negative is correlated with a covariate (e.g., a SNP). For example, hypothetically, there could be a set of SNPs that predispose dogs to unstable knees and sub-diagnostic CCLD. The amount of bias also changes if covariates are strongly or weakly assocated with disease state. That is a set of SNPS are strongly or weakly associated with CCLD. 
 
-Our objective is different from demonstrating bias. Instead, we simulate CCLD-specific GWAS and show conditions for which the biases from naive models (i.e., the usual model assuming no false negatives) are acceptable.
+Our objective is different from demonstrating bias. Instead, we simulate CCLD-specific GWAS and show the sample-size conditions for which the biases from naive models (i.e., the usual model assuming no false negatives) are acceptable. Specifically, we show when the naive model and presence-absence models give the same answers while varying the imbalance between the numbers of cases and control.   
 
 If the naive model is deemed not acceptable, then many other models and analytical methods are available to use. Some methods were specifically designed for GWAS. However, the naive models in GWAS studies fit into a larger data analyitic framework. Data Scientists have develped methods under the name positive-unlabled data. Statisticians use the terms presence-only or confirmation bias, and wildlife population biologists use the term presence-absence or non-detection. So, there is no shortage of methods to account for false negatives.
 
-The aim of this descriptive research to is provide critera for GWAS researchers to use to help determine the usefulness of the naive model, and when to use more advance analytic methods. It is also to help veterinarians and clients assess the credability of diagnostic tests developed from GWAS studies that use GWAS data.
+We have two aims. The first aim is to provide study-design critera for GWAS researchers who are considering using the naive model. The second aim is to help veterinarians and clients assess the credability of diagnostic tests developed from GWAS data.
 
+2. Methods
+2.1. GWAS false-negative rate: a case study
+
+As mentioned above, CCLD-phenotype dogs may rupture their CCL after a study's end, or never, which makes complete detection of CCLD difficult in CCLD GWAS studies. We illustrate the challenges of CCLD GWAS study design using a published study. Baird et al. was chosen because it unambiguouly described the study design, which is the case-control design typical for CCLD GWAS studies. 
+
+In an ideal GWAS case-control  design, only genotype would influence CCLD, and CCLD would present yearly in life. Then, dogs with CCLD would have the CCLD genotype, and older dogs would not. In humans, Cystic Fibrosis is an example of a genetic disease that presents only early in life. 
+
+CCLD has a number phenotypic risk factors, and among them age is the hardest to control for. Baird assumed that dogs older than five year who ruptured ruptured because of age-related ligament degeneration, not CCLD genotype. 
+
+All CCLD GWAS researchers agree that there are false negative cases in control group, but try to minimize their number. Baird et al. follow the standard control group enrollment proceedure, which is to enroll dogs over five years of age with no physcial signs of CCLD.  They attribute CCL rupture in dogs over five years to age-related degeneration of the ligament. One breed they study is the Rottweiler. In and insurance study of Swedish cases, Rotweillers had a median age (min,max) of 4.99 (0.65–9.87), so half the CCLD cases were older than five years of age.
+
+The point of those numbers is that there is uncertainly about the false-negative rate in the control group. It may be as Baird suggests, small, or it may be larger. 
+
+
+
+
+
+
+
+
+2.2. The effect of non-detection in an analytical model of SNP importance
+
+2.3. Simulation study 
+
+Ages of dogs
+Engdahl, K., Emanuelson, U., Höglund, O. et al. The epidemiology of cruciate ligament rupture in an insured Swedish dog population. Sci Rep 11, 9546 (2021). https://doi.org/10.1038/s41598-021-88876-3
 
