--- a/final_sim_2.Rmd
+++ b/final_sim_2.Rmd
@@ -223,6 +223,10 @@ case<-c(225,rev(seq(50,400,by=50)))
 
 contrl<-c(50,100,150,175,25)
 case<-  c(150,100,50,25,175)
+
+contrl<-c(50,50,100,25,100)
+case<-  c(50,100,50,100,25)
+
 #--------------------------------------------
 control<-unlist(contrl)
 case<-unlist(case)
