--- a/nonparametric_sim_two_groups2.Rmd
+++ b/nonparametric_sim_two_groups2.Rmd
@@ -1,6 +1,13 @@
 ---
-title: "R Notebook"
-output: html_notebook
+---
+title: "sim"
+author: Report by Rich Evans
+date: 2023
+output: 
+  html_document:
+     number_sections: true
+
+
 ---
 
 This is a simple two group simulaton for PU data. 
@@ -9,7 +16,7 @@ There are two groups, called case and control
 
 The idea is to get some idea of how sample size, group imbalance, and non-detection affects statistical decisions via p-values.
 
-```{r}
+```{r,include=FALSE}
 #install.packages("pacman")
 pacman::p_load(
        data.table, # to group and clean data
@@ -25,37 +32,9 @@ pacman::p_load(
 ```
 
 
-make the data and run it
-```{r}
-# n.cases <- 100       #we know this
-# n.controls.unlabeled <- 50 #we wish this
-# 
-# prop.nondetect <- 0.2
-# 
-# n.nondetect <- round(0.1*n.controls.unlabeled)
-# 
-# trt.eff <- .1
-# 
-# out <- NULL
-# 
-# for (i in 1:10){
-# df <- data.frame(
-# real.labels = c(rep(1,(n.cases+n.nondetect))
-#                  ,rep(0,(n.controls.unlabeled-n.nondetect))),
-# labelz = c(rep(1,n.cases),rep(0,n.controls.unlabeled)),
-# dat = c(rnorm(n.cases+n.nondetect,mean=trt.eff)
-#         ,rnorm((n.controls.unlabeled-n.nondetect)
-#                        ,mean = 0)))
-# 
-# out <- c(out,c(wilcox_test(data=df,dat ~ labelz)$p
-# ,wilcox_test(data=df,dat ~ real.labels)$p))
-# }
-
-```
 
 
-
-```{r}
+```{r,include=FALSE}
 
 sim.fun<-function(num.iter = NULL
                   ,n.cases = NULL    
@@ -98,20 +77,7 @@ return(data.frame(n.cases=n.cases,
                     
 ```
 
-
-
-```{r}
-# sim.fun(num.iter=50
-#                   ,n.cases = 100       #we know this
-#                   ,n.controls.unlabeled = 50            #we wish new this
-#                   ,prop.nondetect = 0.2
-#                   ,trt.eff = .1)
-```
-
-
-
-```{r}
- now<-Sys.time()
+```{r,include=FALSE}
 # a<-50
 # b<-100
 # c<-200
@@ -129,18 +95,11 @@ case<-  list(50,350,100,300,150,250,200)
 
 # contrl<-list(50,50,100,25,100)
 # case<-  list(50,100,50,100,25)
-#--------------------------------------------
 
-# control<-unlist(contrl)
-# case<-unlist(case)
-#a simulation
-
-oddsratio_to_d(2,log=FALSE)
-
-foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=1000
+foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=5
                   ,n.cases = case       #we know this
                   ,n.controls.unlabeled = contrl            #we wish new this
-                  ,prop.nondetect = 0.2
+                  ,prop.nondetect = .2
                   ,trt.eff = .1)) 
 
 goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
@@ -155,10 +114,104 @@ zoo <- goo %>% group_by(cases=n.cases
                    ,p.tru=median(tru)
                    ,pdiff=median(abs(pu-tru))
                    ) 
-zoo %>% arrange(desc(pdiff)) %>% kable() %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(cohen)) %>% kable() %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(ndet)) %>% kable() %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(pdiff)) %>% 
+  kable(caption = "pdiff l ") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(cohen)) %>% 
+  kable(caption = "cohen ") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(ndet)) %>% 
+  kable(caption = "number non detected ") %>% kable_styling(full_width = FALSE)
+
+oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
+```
+
+
+
+```{r}
+ now<-Sys.time()
+
+
+num.iter <- 15
+prop.nondetect <- 0.2
+trt.ef<-c(.38,.15,.1)
+
+foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
+                  ,n.cases = case       #we know this
+                  ,n.controls.unlabeled = contrl            #we wish new this
+                  ,prop.nondetect = prop.nondetect
+                  ,trt.eff = trt.ef[1])) 
+
+goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
+
+
+zoo <- goo %>% group_by(cases=n.cases
+                        ,contrlz=n.controls.unlabeled) %>% 
+  dplyr::summarise(cntl.tru=median(n.cntl.tru)
+                   ,ndet=median(n.nondetect)
+                   ,cohen=median(cohend)
+                   ,p.pu=median(pu)
+                   ,p.tru=median(tru)
+                   ,pdiff=median(abs(pu-tru))
+                   ) 
+zoo %>% arrange(desc(pdiff)) %>% 
+  kable(caption = "pdiff large eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(cohen)) %>% 
+  kable(caption = "cohen large eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(ndet)) %>% 
+  kable(caption = "number non detected large eff") %>% kable_styling(full_width = FALSE)
   
+#------------------------------------------------
+
+foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
+                  ,n.cases = case       #we know this
+                  ,n.controls.unlabeled = contrl            #we wish new this
+                  ,prop.nondetect = prop.nondetect
+                  ,trt.eff = trt.ef[3])) 
+
+goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
+
+
+zoo <- goo %>% group_by(cases=n.cases
+                        ,contrlz=n.controls.unlabeled) %>% 
+  dplyr::summarise(cntl.tru=median(n.cntl.tru)
+                   ,ndet=median(n.nondetect)
+                   ,cohen=median(cohend)
+                   ,p.pu=median(pu)
+                   ,p.tru=median(tru)
+                   ,pdiff=median(abs(pu-tru))
+                   ) 
+zoo %>% arrange(desc(pdiff)) %>% 
+  kable(caption = "pdiff medium eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(cohen)) %>% 
+  kable(caption = "cohen medium eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(ndet)) %>% 
+  kable(caption = "number non detected medium eff") %>% kable_styling(full_width = FALSE)
+#-------------------------------------------------
+
+
+foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
+                  ,n.cases = case       #we know this
+                  ,n.controls.unlabeled = contrl            #we wish new this
+                  ,prop.nondetect = prop.nondetect
+                  ,trt.eff = trt.ef[3])) 
+
+goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
+
+
+zoo <- goo %>% group_by(cases=n.cases
+                        ,contrlz=n.controls.unlabeled) %>% 
+  dplyr::summarise(cntl.tru=median(n.cntl.tru)
+                   ,ndet=median(n.nondetect)
+                   ,cohen=median(cohend)
+                   ,p.pu=median(pu)
+                   ,p.tru=median(tru)
+                   ,pdiff=median(abs(pu-tru))
+                   ) 
+zoo %>% arrange(desc(pdiff)) %>% 
+  kable(caption = "pdiff small eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(cohen)) %>% 
+  kable(caption = "cohen small eff") %>% kable_styling(full_width = FALSE)
+zoo %>% arrange(desc(ndet)) %>% 
+  kable(caption = "number non detected small eff") %>% kable_styling(full_width = FALSE)
 
 difftime(Sys.time(),now)
 ```
